--- a/statisticsexploration.tex
+++ b/statisticsexploration.tex
@@ -76,11 +76,13 @@ heres an example of an image
 \fi
 
 \section{Calculating Mean of X, Y for Datasets}
+\subsection{Method}
 The mean is a commonly used measure of center for a given statistic. To calculate the mean, we can use the following formula: for a given indexed set of values, the mean is written:
 \[
-\bar{x} = \frac{1}{N} \sum_{i \in I} x_i
+\bar{x} = \frac{1}{N} \sum_{i = 1}^{N} x_i
 \]
-Where N is the length of the data set. In other words, the mean is the sum of each value divided by the number of values for a given parameter.
+Where N is the length of the data set. In other words, the mean is the sum of each value divided by the number of values for a given parameter. \\
+
 
 Calculating these values for each dataset we obtain:
 
@@ -93,6 +95,10 @@ Calculating these values for each dataset we obtain:
 \textbf{Mean}     & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        \\ \hline
 \end{tabular}
 \end{figure}
+
+\subsection{Interpretation}
+
+After computing the mean for each, it's clear that the 
 
 \section{Plots}
 \begin{figure}[htbp]
