--- a/statisticsexploration.tex
+++ b/statisticsexploration.tex
@@ -75,7 +75,7 @@ heres an example of an image
 ############
 \fi
 
-\section{Calculating Mean of X, Y for Datasets}
+\section{Mean of X, Y for Datasets}
 \subsection{Method}
 The mean is a commonly used measure of center for a given statistic. To calculate the mean, we can use the following formula: for a given indexed set of values, the mean is written:
 \[
@@ -90,15 +90,19 @@ Calculating these values for each dataset we obtain:
 \centering
 \begin{tabular}{|l|cc|cc|cc|cc|}
 \hline
-\textbf{}         & \multicolumn{2}{c|}{\textbf{I}}              & \multicolumn{2}{c|}{\textbf{II}}             & \multicolumn{2}{c|}{\textbf{III}}            & \multicolumn{2}{c|}{\textbf{IV}}             \\ \hline
-\textbf{Data set} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} \\ \hline
+\textbf{Data set}         & \multicolumn{2}{c|}{\textbf{I}}              & \multicolumn{2}{c|}{\textbf{II}}             & \multicolumn{2}{c|}{\textbf{III}}            & \multicolumn{2}{c|}{\textbf{IV}}             \\ \hline
+\textbf{Parameter} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} & \multicolumn{1}{c|}{\textit{x}} & \textit{y} \\ \hline
 \textbf{Mean}     & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        & \multicolumn{1}{c|}{9.0}        & 7.5        \\ \hline
 \end{tabular}
 \end{figure}
 
 \subsection{Interpretation}
 
-After computing the mean for each, it's clear that the 
+After computing the mean for each, it's clear that the means for each $x, y$ of the respective datasets are equal. Without any other prior knowledge, one might infer that these datasets have a similar center, save variation or spread. This is because the mean doesn't provide information about the variation or spread of the data. Despite this, however, one might assume it to be a reasonable assumption that these datasets and parameters might be highly similar, especially because they match in two variables.
+
+\section{Exploring Other Statistical Measures}
+
+In addition to computing the mean, there are a number of other tools that provide insight into the properties of a dataset. 
 
 \section{Plots}
 \begin{figure}[htbp]
