--- a/stats.ipynb
+++ b/stats.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,14 @@
     "info = pd.DataFrame()\n",
     "for i in range(4):\n",
     "    # add measures to info\n",
-    "    info.loc['set {}'.format(i), 'mean_x'] = dfs[i]['x'].mean().__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'mean_y'] = dfs[i]['y'].mean().__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'std_x'] = dfs[i]['x'].std().__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'std_y'] = dfs[i]['y'].std().__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'r'] = stats.pearsonr(dfs[i]['x'], dfs[i]['y'])[0].__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'cov'] = dfs[i]['x'].cov(dfs[i]['y']).__round__(2)\n",
-    "    info.loc['set {}'.format(i), 'corr'] = dfs[i]['x'].corr(dfs[i]['y']).__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'mean_x'] = dfs[i]['x'].mean().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'mean_y'] = dfs[i]['y'].mean().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'var_x'] = dfs[i]['x'].var().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'var_y'] = dfs[i]['y'].var().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'std_x'] = dfs[i]['x'].std().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'std_y'] = dfs[i]['y'].std().__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'r²'] = (stats.pearsonr(dfs[i]['x'], dfs[i]['y'])[0] ** 2).__round__(2)\n",
+    "    info.loc['set {}'.format(i+1), 'cov'] = dfs[i]['x'].cov(dfs[i]['y']).__round__(2)\n",
     "\n",
     "\n",
     "info.to_csv('stats.csv')\n",
