--- a/statisticsexploration.tex
+++ b/statisticsexploration.tex
@@ -75,6 +75,12 @@ heres an example of an image
 ############
 \fi
 
+\section{Introduction}
+
+In the real-world, statistics are often viewed as objective measures of datasets. Because of this, we often draw important, life-changing decisions on their basis alone. For instance, pharmacists employ statistics when researching new treatments for disease. Luckily for us, statistics often \textit{are} helpful and insightful in disseminating trends and patterns in data. But, again, it is all too easy to forget their short-comings.
+
+In this paper, I will explore the ways in which statistical measures can be misleading in interpreting the significance of, trends in, or general patterns within data.
+
 \section{Mean of X, Y for Datasets}
 \subsection{Method}
 The mean is a commonly used measure of center for a given statistic. To calculate the mean, we can use the following formula: for a given indexed set of values, the mean is written:
